syntax = "proto3";

option go_package = "proto/go;demopb";

package test.message;

import "proto/common.proto";

message TestSamePkgRequest {
  string name = 1;
  int32 age = 2;
  test.common.CommonMessage common_message = 3;
}

message TestSamePkgResponse {
  test.common.ResultCode result_code = 1;
  string name = 2;
  int32 age = 3;
}